--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <hr>
     <div class="skills">
-      <h2>My Skills.</h2>
+      <h2>My time spent on.</h2>
       <div class="skill-row">
         <img class="code" src="images/pgmg.gif" alt="">
         <h3>Programmer</h3>
