--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="www.linkedin.com/in/harisk05062002">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
     <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
     <p class="cr">© 2020 HARI.SK @ Programmer</p>
